LPS-91105 Patch Tomcat Jasper: 1) append "/" to the base URL for JasperLoader to let URLClassLoader treat it as directory; 2) make JasperLoader able to load JSP class from its parent; 3) cache JspApplicationContextImpl by itself to avoid conflict against Tomcat app server's instance in ServletContext